--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,9 @@ services:
     image: itzcrazykns1337/perplexica-backend:main
     environment:
       - SEARXNG_API_URL=http://searxng:8080
+      - OPENAI=${OPENAI}
+      - GROQ=${GROQ}
+      - ANTHROPIC=${ANTHROPIC}
     depends_on:
       - searxng
     ports:
@@ -37,6 +40,10 @@ services:
         - NEXT_PUBLIC_API_URL=http://127.0.0.1:3001/api
         - NEXT_PUBLIC_WS_URL=ws://127.0.0.1:3001
     image: itzcrazykns1337/perplexica-frontend:main
+    environment:
+      - OPENAI=${OPENAI}
+      - GROQ=${GROQ}
+      - ANTHROPIC=${ANTHROPIC}
     depends_on:
       - perplexica-backend
     ports:
